css: Ensure the pages border isn't blurry and looks correct in dark
--border-color follows currentColor, which in dark becomes white, since
pages don't override it. It's also shown above the white background,
which means it's blurry for the selected item in light and looks like the
page is larger in dark.

--- a/shell/papers.css
+++ b/shell/papers.css
@@ -65,8 +65,14 @@ pps-presentation-view.white-mode {
 }
 
 pps-sidebar-thumbnails child.activatable picture {
-    border: 1px solid var(--border-color);
+    border: 1px solid var(--shade-color);
+    background-clip: content-box;
     background-color: #ffffff;
+}
+
+pps-sidebar-thumbnails child.activatable picture.inverted-color {
+    /* The border gets inverted too and becomes light otherwise */
+    border: 1px solid white;
 }
 
 pps-sidebar-thumbnails picture {
